test/frontend/fail/incomplete_coercion.osl
struct S { int a, b, c; };
void foo(S s) {}
shader bar() {
    foo({ 1, 2 });
}
